--- a/01_home.html
+++ b/01_home.html
@@ -1,7 +1,7 @@
 ---
 layout: default
+title: 主页
 ---
-
 <div class="home">
 
 <div class="site-header-container {% if site.cover %}has-cover{% endif %}" {% if site.cover %}style="background-image: url({{ site.cover | prepend: site.baseurl }});"{% endif %}>
@@ -13,4 +13,4 @@ layout: default
 	</div>
 </div>
 
-yoooo
+</div>
