--- a/about.html
+++ b/about.html
@@ -1,16 +1,6 @@
 ---
 layout: page
-title: About
+title: 公司简介
 ---
 
-<img src="{{ site.baseurl }}assets/profile-placeholder.gif" title="Profile Picture" class="profile">
-
-Centrarium is a custom theme for Jekyll, made by [Ben Centra][bencentra] for his own blog. He'd be humbled if you liked it enough to use it as well! Installation and configuration instructions can be found in the [GitHub repository](https://github.com/bencentra/centrarium).
-
-This page is a good place to write about yourself, your project, your product, or whatever it is your site is for. You can replace the image above, or you can get rid of it entirely. 
-
-You can find out more info about customizing your Jekyll theme, as well as basic Jekyll usage documentation at [jekyllrb.com](http://jekyllrb.com/). And you can find the source code for Jekyll at [github.com/jekyll/jekyll](https://github.com/jekyll/jekyll)
-
-[centrarium]: https://github.com/bencentra/centrarium
-[bencentra]: http://bencentra.com
-[jekyll]: https://github.com/jekyll/jekyll
+	武汉记忆碎片科技有限公司（以下简称记忆科技），记忆科技成立于2015年。创始团队成员个个满怀生活热情，都极度热爱自己编写的代码与自己设计的电路图。记忆科技是创始团队成员共赢理念与对梦想执着的结晶。
