--- a/carcer.html
+++ b/carcer.html
@@ -244,7 +244,7 @@ title: 人才招募
 	<span class="s1">湖北武汉洪山区书城路</span><span class="s2">26</span><span class="s1">号洪山科技创业园</span><span class="s2">B</span><span class="s1">栋六层</span> 
 </p>
 <p class="p12">
-	<span class="s1">发送至hr@bcitech.cn</span> 
+	<span class="s1">发送至<a href="mailto:hr@bcitech.cn"><span class="s4">hr@bcitech.cn</span></a></span> 
 </p>
 <p class="p12">
 	<span class="s1">薪资面谈</span> 
