--- a/about.html
+++ b/about.html
@@ -3,4 +3,10 @@ layout: page
 title: 公司简介
 ---
 
-	武汉记忆碎片科技有限公司（以下简称记忆科技），记忆科技成立于2015年。创始团队成员个个满怀生活热情，都极度热爱自己编写的代码与自己设计的电路图。记忆科技是创始团队成员共赢理念与对梦想执着的结晶。
+
+
+武汉记忆碎片科技有限公司（以下简称记忆科技），记忆科技成立于2015年。创始团队成员个个满怀生活热情，都极度热爱自己编写的代码与自己设计的电路。记忆科技是创始团队成员共赢理念与对梦想执着的结晶。</br>
+
+记忆科技积极致力于社会经济的可持续发展，运用信息与位置服务的专业经验，弥合数字鸿沟，让人人享有高品质的位置服务；我们努力保障网络的安全稳定运作，助力客户和各行各业提升效率、降低能耗，推动低碳经济增长；我们开展本地化运作，构建全球价值链，帮助本地发挥出全球价值，实现整个产业链的共赢。</br>
+
+	我们深信：未来将是一个全联接的世界，是一个位置数字化的世界。记忆科技与合作伙伴一起，开放合作，努力构建一个更加高效整合的位置系统，促进人与人、人与物、物与物的全面互联和交融，激发每个人在任何时间、任何地点的无限机遇与潜能，推动世界进步。</br>
