--- a/team.html
+++ b/team.html
@@ -3,34 +3,140 @@ layout: page
 title: 团队展示
 ---
 
-<img src="{{ site.baseurl }}assets/p1.JPG" title="Profile Picture" class="profile">
+<img src="{{ site.baseurl }}assets/p1.JPG" title="Profile Picture" class="profile" style="float:left;">
 <p style="text-align:center;">
+	</br>
+	</br>
+	</br>
+	</br>
+	</br>
 	赵世峰
 </p>
-<img src="{{ site.baseurl }}assets/p2.JPG" title="Profile Picture" class="profile">
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+
+<img src="{{ site.baseurl }}assets/p2.JPG" title="Profile Picture" class="profile" style="float:right;">
 <p style="text-align:center;">
+		</br>
+	</br>
+	</br>
+	</br>
+	</br>
 	陈思义
 </p>
-<img src="{{ site.baseurl }}assets/p3.JPG" title="Profile Picture" class="profile">
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+<img src="{{ site.baseurl }}assets/p3.JPG" title="Profile Picture" class="profile" style="float:left;">
 <p style="text-align:center;">
+		</br>
+	</br>
+	</br>
+	</br>
+	</br>
 	毛宁
 </p>
-<img src="{{ site.baseurl }}assets/p4.JPG" title="Profile Picture" class="profile">
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+<img src="{{ site.baseurl }}assets/p4.JPG" title="Profile Picture" class="profile" style="float:right;">
 <p style="text-align:center;">
+	</br>
+	</br>
+	</br>
+	</br>
+	</br>
 	向贤松
 </p>
-<img src="{{ site.baseurl }}assets/p5.JPG" title="Profile Picture" class="profile">
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+<img src="{{ site.baseurl }}assets/p5.JPG" title="Profile Picture" class="profile" style="float:left;">
 <p style="text-align:center;">
+	</br>
+	</br>
+	</br>
+	</br>
+	</br>
 	余大茂
-</p>
-<img src="{{ site.baseurl }}assets/p6.JPG" title="Profile Picture" class="profile">
+</p> 
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+<img src="{{ site.baseurl }}assets/p6.JPG" title="Profile Picture" class="profile" style="float:right;">
 <p style="text-align:center;">
+	</br>
+	</br>
+	</br>
+	</br>
+	</br>
 	陈永刚
 </p>
-<img src="{{ site.baseurl }}assets/p7.JPG" title="Profile Picture" class="profile">
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+<img src="{{ site.baseurl }}assets/p7.JPG" title="Profile Picture" class="profile" style="float:left;">
 <p style="text-align:center;">
+	</br>
+	</br>
+	</br>
+	</br>
+	</br>
 	王壮
 </p>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
 
 
 
