--- a/contact.html
+++ b/contact.html
@@ -27,4 +27,4 @@ title: 联系我们
 	<br />
 </p>
 
-<img src="{{ site.baseurl }}assets/location.png" title="Profile Picture" class="profile">
+<img src="{{ site.baseurl }}assets/location.png" >
