--- a/team.html
+++ b/team.html
@@ -10,10 +10,10 @@ title: 团队展示
 	</br>
 	</br>
 	</br>
-	赵世峰
+	赵世峰,Chester</br>
+	首席设计师</br>
+	你是我脚前的灯，路上的光</br>
 </p>
-</br>
-</br>
 </br>
 </br>
 </br>
@@ -49,11 +49,11 @@ title: 团队展示
 	</br>
 	</br>
 	</br>
-	毛宁
+	毛宁</br>
+	首席市场官</br>
+</br>
 </p>
-</br>
-</br>
-</br>
+
 </br>
 </br>
 </br>
@@ -68,12 +68,15 @@ title: 团队展示
 	</br>
 	</br>
 	</br>
-	向贤松
+	向贤松，Ivan Len
+
+	</br>
+	首席运营官</br>
+
+不要放弃，不要害怕，前进的路上</br>
+有你，有我，永不止步，再创辉煌！</br>
 </p>
-</br>
-</br>
-</br>
-</br>
+
 </br>
 </br>
 </br>
@@ -106,15 +109,16 @@ title: 团队展示
 	</br>
 	</br>
 	</br>
-	陈永刚
+	陈永刚,JaydenChen</br>
+	喜欢开拓，喜欢冒险，喜欢创造</br>
+	喜欢做导演，喜欢被争议,喜欢追随，</br>
+	不喜欢学习，不喜欢安逸，不喜欢做观众，不喜欢被定义！</br>
+	Just create it！</br>
 </p>
+
 </br>
 </br>
-</br>
-</br>
-</br>
-</br>
-</br>
+
 </br>
 </br>
 </br>
@@ -125,13 +129,14 @@ title: 团队展示
 	</br>
 	</br>
 	</br>
-	王壮
+	王壮,Justin</br>
+	电子研发工程师</br>
+人生的道路不会一帆风顺，事业的征途充满崎岖艰险	</br>
+只有奋斗和拼搏，才有机会取得成功</br>
 </p>
-</br>
-</br>
-</br>
-</br>
-</br>
+
+
+
 </br>
 </br>
 </br>
