--- a/contact.html
+++ b/contact.html
@@ -28,5 +28,4 @@ title: 联系我们
 </p>
 
 <img src="{{ site.baseurl }}assets/location.png" >
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<iframe width="504" height="716" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://j.map.baidu.com/-VygD"></iframe>
+<iframe width="604" height="665" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://j.map.baidu.com/06mgD" style="center"></iframe>
