--- a/team.html
+++ b/team.html
@@ -2,7 +2,31 @@
 layout: page
 title: 团队展示
 ---
-
+<img src="{{ site.baseurl }}assets/p6.JPG" title="Profile Picture" class="profile" style="float:right;">
+<p style="text-align:center;">
+	</br>
+	</br>
+	</br>
+	</br>
+	</br>
+	陈永刚,JaydenChen</br>
+	喜欢开拓，喜欢冒险，喜欢创造</br>
+	喜欢做导演，喜欢被争议,喜欢追随，</br>
+	不喜欢学习，不喜欢安逸，不喜欢做观众，不喜欢被定义！</br>
+	Just create it！</br>
+</p>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
 <img src="{{ site.baseurl }}assets/p1.JPG" title="Profile Picture" class="profile" style="float:left;">
 <p style="text-align:center;">
 	</br>
@@ -30,8 +54,13 @@ title: 团队展示
 	</br>
 	</br>
 	</br>
-	陈思义
+	陈思义 Roy</br>
+	算法设计师</br>
+	愚者不努力，懒人盼巅峰</br>
 </p>
+</br>
+</br>
+</br>
 </br>
 </br>
 </br>
@@ -54,6 +83,10 @@ title: 团队展示
 </br>
 </p>
 
+</br>
+</br>
+</br>
+</br>
 </br>
 </br>
 </br>
@@ -90,7 +123,8 @@ title: 团队展示
 	</br>
 	</br>
 	</br>
-	余大茂
+	余大茂</br>
+	软件工程师</br>	
 </p> 
 </br>
 </br>
@@ -102,19 +136,7 @@ title: 团队展示
 </br>
 </br>
 </br>
-<img src="{{ site.baseurl }}assets/p6.JPG" title="Profile Picture" class="profile" style="float:right;">
-<p style="text-align:center;">
-	</br>
-	</br>
-	</br>
-	</br>
-	</br>
-	陈永刚,JaydenChen</br>
-	喜欢开拓，喜欢冒险，喜欢创造</br>
-	喜欢做导演，喜欢被争议,喜欢追随，</br>
-	不喜欢学习，不喜欢安逸，不喜欢做观众，不喜欢被定义！</br>
-	Just create it！</br>
-</p>
+
 
 </br>
 </br>
@@ -122,7 +144,7 @@ title: 团队展示
 </br>
 </br>
 </br>
-<img src="{{ site.baseurl }}assets/p7.JPG" title="Profile Picture" class="profile" style="float:left;">
+<img src="{{ site.baseurl }}assets/p7.JPG" title="Profile Picture" class="profile" style="float:right;">
 <p style="text-align:center;">
 	</br>
 	</br>
